unpackaged/main/default/objects/DCP_Arcus__c/DCP_Arcus__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DCP Arcus</label>
</CustomObject>