unpackaged/main/default/objects/DCP_Arcus__c/fields/API_Key__c.field-meta.xml
<CustomField>
    <fullName>API_Key__c</fullName>
    <label>API Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>