unpackaged/main/default/objects/DCP_Arcus__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <label>Endpoint</label>
    <length>200</length>
    <type>Text</type>
</CustomField>