unpackaged/main/default/objects/DCP_Arcus__c/fields/Secret_key__c.field-meta.xml
<CustomField>
    <fullName>Secret_key__c</fullName>
    <label>Secret key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>